--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
     <head>
         <title>gnikoul</title>
-        <link rel="stylesheet" type="text/css" href="./general.css">
-        <link rel="stylesheet" type="text/css" href="./intro.css">
-        <link rel="stylesheet" type="text/css" href="./nav-bar.css">
-        <link rel="stylesheet" type="text/css" href="./publications.css">
-        <link rel="stylesheet" type="text/css" href="./career.css">
+        <link rel="stylesheet" type="text/css" href="./css/general.css">
+        <link rel="stylesheet" type="text/css" href="./css/nav-bar.css">
+        <link rel="stylesheet" type="text/css" href="./css/intro.css">
+        <link rel="stylesheet" type="text/css" href="./css/publications.css">
+        <link rel="stylesheet" type="text/css" href="./css/career.css">
+        <link rel="stylesheet" type="text/css" href="./css/contact.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" />
-    </head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    </head> 
     <body>
         <main>
             <nav class="nav-bar">
@@ -24,20 +28,20 @@
 
             <section class="intro">
                 <div class="about-me">
-                    <div class="head"> 
+                    <div class="image" id="intro-img">
+                        <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
+                    </div>
+                    <div class="intro-head" id="intro-head"> 
                         Hi, I'm Giorgos Nikoulis
                     </div>
-                    <div class="body">
+                    <div class="body" id="intro-body">
                         I was born and raised in Thessaloniki, the second biggest city in Greece.
                         I completed my Doctoral degree in Computational Physics in 2022 and published six papers during my research.
                         I acquired several skills in physics simulation and computer science, workin with C++ and Python, and web
-                        development with HTML, CSS, and JavaScript during several Horizon projects. 
-                        
+                        development with HTML, CSS, JavaScript, and Flask during my career. 
                     </div>
                 </div>
-                <div class="image">
-                    <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
-                </div>
+
             </section>
 
             <section class="career">
@@ -172,9 +176,30 @@
             </section>
 
             <section class="contact">
+                <div class="email-me">You can send me an email at:</div>
+                <a href="mailto:gnikoul@gmail.com">
+                    <span class="material-symbols-outlined envelope" style="font-size:45px; cursor:pointer;text-shadow: 2px 2px 0px red;">mail</span>
+                    <br>
+                    <div class="email">gnikoul@gmail.com</div>
+                </a>
+
+                <div class="find-me">Or find my projects on:</div>
+                <a href="https://github.com/gnikoul" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+
+                <div class="city">Greece, Thessaloniki</div>
+                <div id="map" class="map"></div>
+
+                <div class="copyright">Copyright &copy; 2025 Γεώργιος Νικούλης all rights reserved.</div>
             </section>
 
         </main>
-        <script type="text/javascript" src="./index.js"></script>
+        <script type="text/javascript" src="./js/general.js"></script>
+        <script type="text/javascript" src="./js/intro.js"></script>
+        <script type="text/javascript" src="./js/career.js"></script>
+        <script type="text/javascript" src="./js/maps.js"></script>
+        <script type="text/javascript" src="./js/publications.js"></script>
+
     </body>
 </html>
