--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="./css/intro.css">
         <link rel="stylesheet" type="text/css" href="./css/publications.css">
         <link rel="stylesheet" type="text/css" href="./css/career.css">
-        <link rel="stylesheet" type="text/css" href="./css/contact.css">
+        <link rel="stylesheet" type="text/css" href="./css/footer.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -26,11 +26,10 @@
                 <div id="Contact">Contact</div>
             </nav>
 
-            <section class="intro">
+            <section class="intro" id="intro">
+
                 <div class="about-me">
-                    <div class="image" id="intro-img">
-                        <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
-                    </div>
+
                     <div class="intro-head" id="intro-head"> 
                         Hi, I'm Giorgos Nikoulis
                     </div>
@@ -41,7 +40,9 @@
                         development with HTML, CSS, JavaScript, and Flask during my career. 
                     </div>
                 </div>
-
+                                    <div class="image" id="intro-img">
+                        <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
+                    </div>
             </section>
 
             <section class="career">
@@ -175,7 +176,7 @@
                 </div>
             </section>
 
-            <section class="contact">
+            <footer class="contact">
                 <div class="email-me">You can send me an email at:</div>
                 <a href="mailto:gnikoul@gmail.com">
                     <span class="material-symbols-outlined envelope" style="font-size:45px; cursor:pointer;text-shadow: 2px 2px 0px red;">mail</span>
@@ -192,7 +193,7 @@
                 <div id="map" class="map"></div>
 
                 <div class="copyright">Copyright &copy; 2025 Γεώργιος Νικούλης all rights reserved.</div>
-            </section>
+            </footer>
 
         </main>
         <script type="text/javascript" src="./js/general.js"></script>
