add under construction, pypi profile

--- a/index.html
+++ b/index.html
@@ -25,9 +25,22 @@
                 <div id="Publications">Publications</div>
                 <div id="Contact">Contact</div>
             </nav>
+            <div style="
+                position: fixed;
+                top: 100px;
+                right: 50%;
+                transform: translateX(50%);
+                background: #ffcc00;
+                padding: 10px 15px;
+                border-radius: 6px;
+                font-weight: bold;
+                font-size: 20px;
+                z-index: 9999;
+            ">
+                🚧 This page is under construction 🚧
+            </div>
 
             <section class="intro" id="intro">
-
                 <div class="about-me">
 
                     <div class="intro-head" id="intro-head"> 
@@ -40,9 +53,9 @@
                         development with HTML, CSS, JavaScript, and Flask during my career. 
                     </div>
                 </div>
-                                    <div class="image" id="intro-img">
-                        <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
-                    </div>
+                <div class="image" id="intro-img">
+                    <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
+                </div>
             </section>
 
             <section class="career">
@@ -188,6 +201,13 @@
                 <a href="https://github.com/gnikoul" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
+
+                <div class="find-me"><a href="https://pypi.org/user/gnikoul/" target="_blank">
+                    PyPi
+                </a></div>
+
+                
+
 
                 <div class="city">Greece, Thessaloniki</div>
                 <div id="map" class="map"></div>
