--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>gnikoul</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/general.css">
         <link rel="stylesheet" type="text/css" href="./css/nav-bar.css">
         <link rel="stylesheet" type="text/css" href="./css/intro.css">
@@ -34,10 +35,10 @@
                 padding: 10px 15px;
                 border-radius: 6px;
                 font-weight: bold;
-                font-size: 20px;
+                font-size: 1.25rem;
                 z-index: 9999;
             ">
-                🚧 This page is under construction 🚧
+                🚧 This page is under constructionn 🚧
             </div>
 
             <section class="intro" id="intro">
