--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </nav>
             <div style="
                 position: fixed;
-                top: 100px;
+                top: 6.25rem;
                 right: 50%;
                 transform: translateX(50%);
                 background: #ffcc00;
-                padding: 10px 15px;
-                border-radius: 6px;
+                padding: 0.625rem 0.938rem;
+                border-radius: 0.375rem;
                 font-weight: bold;
                 font-size: 1.25rem;
                 z-index: 9999;
