--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
                 background: #ffcc00;
                 padding: 0.625rem 0.938rem;
                 border-radius: 0.375rem;
-                font-weight: bold;
-                font-size: 1.25rem;
+                font-size: 1rem;
+                text-align: center;
                 z-index: 9999;
             ">
-                🚧 This page is under constructionn 🚧
+                🚧<br>This page is under construction<br>🚧
             </div>
 
             <section class="intro" id="intro">
                 <div class="about-me">
 
                     <div class="intro-head" id="intro-head"> 
-                        Hi, I'm Giorgos Nikoulis
+                        Hi, I'm Giorgos&nbsp;Nikoulis
                     </div>
                     <div class="intro-profession">
                         <span id="intro-profession"></span>
@@ -65,7 +65,7 @@
 
             <section class="career">
                 <div class="section-name">
-                    <p>— Career —</p>
+                    <p>—&nbsp;Career&nbsp;—</p>
                 </div>
                 <div class="timeline" id="timeline">
                     <div class="container">
@@ -132,7 +132,7 @@
 
             <section class="publications">
                 <div class="section-name">
-                    <p>— Publications —</p>
+                    <p>—&nbsp;Publications&nbsp;—</p>
                 </div>
                 <div class="publication">
                     <div class="title">
