--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <title>gnikoul</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/general.css">
         <link rel="stylesheet" type="text/css" href="./css/nav-bar.css">
         <link rel="stylesheet" type="text/css" href="./css/intro.css">
-        <link rel="stylesheet" type="text/css" href="./css/publications.css">
+        <link rel="stylesheet" type="text/css" href="./css/projects.css">
         <link rel="stylesheet" type="text/css" href="./css/career.css">
         <link rel="stylesheet" type="text/css" href="./css/footer.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,8 +23,8 @@
         <main>
             <nav class="nav-bar">
                 <div id="AboutMe">About Me</div>
+                <div id="Projects">Projects</div>
                 <div id="Career">Career</div>
-                <div id="Publications">Publications</div>
                 <div id="Contact">Contact</div>
             </nav>
             <div style="
@@ -60,6 +61,121 @@
                 </div>
                 <div class="image" id="intro-img">
                     <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
+                </div>
+            </section>
+
+            <section class="projects">
+                <div class="section-name">
+                    <p>—&nbsp;Projects&nbsp;—</p>
+                </div>
+                <div class="project">
+                    <div class="project-image">
+                        <img src="images/transparency.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            Transparency Services for AI-Model Cards
+                        </div>
+                        <div class="authors">
+                            CERTH
+                        </div>
+                        <div class="doi">
+                            <a href="https://trai.mever.gr" target="_blank">https://trai.mever.gr</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-image">
+                        <img src="images/fenp.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            Multiscale machine-learning interatomic potentials for ferromagnetic and liquid iron
+                        </div>
+                        <div class="authors">
+                            Jesper Byggmästar, <strong>Giorgos Nikoulis</strong>, Aslak Fellman et al. 
+                        </div>
+                        <div class="doi">
+                            DOI: <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac6f39" target="_blank">10.1088/1361-648X/ac6f39</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-image">
+                        <img src="images/mowgap.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            Machine-learning interatomic potential for W-Mo alloys
+                        </div>
+                        <div class="authors">
+                            <strong>Giorgos Nikoulis</strong>, Jesper Byggmästar, Joseph Kioseoglou et al. 
+                        </div>
+                        <div class="doi">
+                            DOI: <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac03d1/meta" target="_blank">10.1088/1361-648X/ac6f39</a>
+                        </div>
+                    </div>
+                </div><div class="project">
+                    <div class="project-image">
+                        <img src="images/sildenafil.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            Sildenafil nanoparticles using polymer stabilizers
+                        </div>
+                        <div class="authors">
+                            <strong>Giorgos Nikoulis</strong>, Joseph Kioseoglou, Kachrimanis Kyriakos et al. 
+                        </div>
+                        <div class="doi">
+                            DOI: To be published
+                        </div>
+                    </div>
+                </div><div class="project">
+                    <div class="project-image">
+                        <img src="images/heatlock.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            Thermal insulation and heat guiding using nanopatterned MoS2
+                        </div>
+                        <div class="authors">
+                            Peng Xiao, Alexandros El Sachat, Emigdio Chávez Angel, <strong>Giorgos Nikoulis</strong>, et al. 
+                        </div>
+                        <div class="doi">
+                            DOI: <a href="https://arxiv.org/abs/2204.04999" target="_blank">10.1088/1361-648X/ac6f39</a>
+                        </div>
+                    </div>
+                </div><div class="project">
+                    <div class="project-image">
+                        <img src="images/nanomaterialscad.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            NanoMaterialsCAD: Flexible Software for the Design of Nanostructures
+                        </div>
+                        <div class="authors">
+                            <strong>Giorgos Nikoulis</strong>, Panagiotis Grammatikopoulos, Stephan Steinhauer et al.
+                        </div>
+                        <div class="doi">
+                            DOI: <a href="https://advanced.onlinelibrary.wiley.com/doi/abs/10.1002/adts.202000232" target="_blank">10.1088/1361-648X/ac6f39</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project" >
+                    <div class="project-image">
+                        <img src="images/chargedistr.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            Single Nanoparticle Activities in Ensemble: A Study on Pd Cluster Nanoportals for Electrochemical Oxygen Evolution Reaction
+                        </div>
+                        <div class="authors">
+                            Abheek Datta, Alexander J. Porkovich, Pawan Kumar, <strong>Giorgos Nikoulis</strong> et al. 
+                        </div>
+                        <div class="doi">
+                            DOI: <a href="https://pubs.acs.org/doi/10.1021/acs.jpcc.9b07824" target="_blank">10.1088/1361-648X/ac6f39</a>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -130,74 +246,6 @@
                 </div>
             </section>
 
-            <section class="publications">
-                <div class="section-name">
-                    <p>—&nbsp;Publications&nbsp;—</p>
-                </div>
-                <div class="publication">
-                    <div class="title">
-                        Multiscale machine-learning interatomic potentials for ferromagnetic and liquid iron
-                    </a>
-                    </div>
-                    <div class="authors">
-                        Jesper Byggmästar, <strong>Giorgos Nikoulis</strong>, Aslak Fellman et al. 
-                    </div>
-                    <div class="doi">
-                        DOI: <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac6f39" target="_blank">10.1088/1361-648X/ac6f39</a>
-                    </div>
-                </div><div class="publication">
-                    <div class="title">
-                        Machine-learning interatomic potential for W-Mo alloys
-                    </div>
-                    <div class="authors">
-                        <strong>Giorgos Nikoulis</strong>, Jesper Byggmästar, Joseph Kioseoglou et al. 
-                    </div>
-                    <div class="doi">
-                        DOI: <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac03d1/meta" target="_blank">10.1088/1361-648X/ac6f39</a>
-                    </div>
-                </div><div class="publication">
-                    <div class="title">
-                        Sildenafil nanoparticles using polymer stabilizers
-                    </div>
-                    <div class="authors">
-                        <strong>Giorgos Nikoulis</strong>, Joseph Kioseoglou, Kachrimanis Kyriakos et al. 
-                    </div>
-                    <div class="doi">
-                        DOI: To be published
-                    </div>
-                </div><div class="publication">
-                    <div class="title">
-                        Thermal insulation and heat guiding using nanopatterned MoS2
-                    </div>
-                    <div class="authors">
-                        Peng Xiao, Alexandros El Sachat, Emigdio Chávez Angel, <strong>Giorgos Nikoulis</strong>, et al. 
-                    </div>
-                    <div class="doi">
-                        DOI: <a href="https://arxiv.org/abs/2204.04999" target="_blank">10.1088/1361-648X/ac6f39</a>
-                    </div>
-                </div><div class="publication">
-                    <div class="title">
-                        NanoMaterialsCAD: Flexible Software for the Design of Nanostructures
-                    </div>
-                    <div class="authors">
-                        <strong>Giorgos Nikoulis</strong>, Panagiotis Grammatikopoulos, Stephan Steinhauer et al.
-                    </div>
-                    <div class="doi">
-                        DOI: <a href="https://advanced.onlinelibrary.wiley.com/doi/abs/10.1002/adts.202000232" target="_blank">10.1088/1361-648X/ac6f39</a>
-                    </div>
-                </div><div class="publication" style="border: none;">
-                    <div class="title">
-                        Single Nanoparticle Activities in Ensemble: A Study on Pd Cluster Nanoportals for Electrochemical Oxygen Evolution Reaction
-                    </div>
-                    <div class="authors">
-                        Abheek Datta, Alexander J. Porkovich, Pawan Kumar, <strong>Giorgos Nikoulis</strong> et al. 
-                    </div>
-                    <div class="doi">
-                        DOI: <a href="https://pubs.acs.org/doi/10.1021/acs.jpcc.9b07824" target="_blank">10.1088/1361-648X/ac6f39</a>
-                    </div>
-                </div>
-            </section>
-
             <footer class="contact">
                 <div class="find-me-head">You can find me via:</div>
                 <div class="find-me-info">
@@ -218,7 +266,7 @@
         <script type="text/javascript" src="./js/intro.js"></script>
         <script type="text/javascript" src="./js/career.js"></script>
         <script type="text/javascript" src="./js/maps.js"></script>
-        <script type="text/javascript" src="./js/publications.js"></script>
+        <script type="text/javascript" src="./js/projects.js"></script>
 
     </body>
 </html>
