worked on projects

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="Career">Career</div>
                 <div id="Contact">Contact</div>
             </nav>
-            <div style="
+            <!-- <div style="
                 position: fixed;
                 top: 6.25rem;
                 right: 50%;
@@ -40,7 +40,7 @@
                 z-index: 9999;
             ">
                 🚧<br>This page is under construction<br>🚧
-            </div>
+            </div> -->
 
             <section class="intro" id="intro">
                 <div class="about-me">
@@ -76,11 +76,47 @@
                         <div class="title">
                             Transparency Services for AI-Model Cards
                         </div>
-                        <div class="authors">
-                            CERTH
+                        <div class="description">
+                            Create and mange model cards for AI models. <br>
+                            Created for <a href="https://mever.gr/" target="_blank">MeVer</a> group of <a href="https://www.iti.gr/iti/" target="_blank">CERTH</a> <br>
+                            Powered by: <span style="color:black">Flask</span>
                         </div>
-                        <div class="doi">
+                        <div class="links">
                             <a href="https://trai.mever.gr" target="_blank">https://trai.mever.gr</a>
+                        </div>
+                    </div>
+                </div>
+                </div><div class="project">
+                    <div class="project-image">
+                        <img src="images/nanomaterialscad.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            NanoMaterialsCAD
+                        </div>
+                        <div class="description">
+                            Create and edit nanoparticles and crystalline structures. <br>
+                            Powered by: <span style="color:black">C++</span>  and <span style="color:black">OpenGL</span>
+                        </div>
+                        <div class="links">
+                            Paper: <a href="https://advanced.onlinelibrary.wiley.com/doi/abs/10.1002/adts.202000232" target="_blank">Link</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-image">
+                        <img src="images/heatlock.png" alt="">
+                    </div>
+                    <div class="project-info">
+                        <div class="title">
+                            Thermal insulation and heat guiding
+                        </div>
+                        <div class="description">
+                            Heat guiding with nanopatterned MoS2 membranes. <br>
+                            Powered by: <span style="color:black">LAMMPS </span>
+                        </div>
+                        <div class="links">
+                            Paper: <a href="https://arxiv.org/abs/2204.04999" target="_blank">link</a>
                         </div>
                     </div>
                 </div>
@@ -90,13 +126,14 @@
                     </div>
                     <div class="project-info">
                         <div class="title">
-                            Multiscale machine-learning interatomic potentials for ferromagnetic and liquid iron
+                            ML interatomic potentials for iron
                         </div>
-                        <div class="authors">
-                            Jesper Byggmästar, <strong>Giorgos Nikoulis</strong>, Aslak Fellman et al. 
+                        <div class="description">
+                            Machine Learning interatomic potential for Fe. <br>
+                            Powered by: <span style="color:black">LAMMPS</span>, <span style="color:black">VASP</span>, and <span style="color:black">GAP</span>
                         </div>
-                        <div class="doi">
-                            DOI: <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac6f39" target="_blank">10.1088/1361-648X/ac6f39</a>
+                        <div class="links">
+                            Paper: <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac6f39" target="_blank">link</a>
                         </div>
                     </div>
                 </div>
@@ -106,13 +143,14 @@
                     </div>
                     <div class="project-info">
                         <div class="title">
-                            Machine-learning interatomic potential for W-Mo alloys
+                            ML interatomic potential for W-Mo alloys
                         </div>
-                        <div class="authors">
-                            <strong>Giorgos Nikoulis</strong>, Jesper Byggmästar, Joseph Kioseoglou et al. 
+                        <div class="description">
+                            Machine Learning interatomic potential for WMo alloys. <br>
+                            Powered by: <span style="color:black">LAMMPS</span>, <span style="color:black">VASP</span>, and <span style="color:black">GAP</span>
                         </div>
-                        <div class="doi">
-                            DOI: <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac03d1/meta" target="_blank">10.1088/1361-648X/ac6f39</a>
+                        <div class="links">
+                            Paper: <a href="https://iopscience.iop.org/article/10.1088/1361-648X/ac03d1/meta" target="_blank">link</a>
                         </div>
                     </div>
                 </div><div class="project">
@@ -123,41 +161,12 @@
                         <div class="title">
                             Sildenafil nanoparticles using polymer stabilizers
                         </div>
-                        <div class="authors">
-                            <strong>Giorgos Nikoulis</strong>, Joseph Kioseoglou, Kachrimanis Kyriakos et al. 
+                        <div class="description">
+                            A study for stabilizing sildenafil nanoparticles. <br>
+                            Powered by: <span style="color:black">LAMMPS</span>
                         </div>
-                        <div class="doi">
+                        <div class="links">
                             DOI: To be published
-                        </div>
-                    </div>
-                </div><div class="project">
-                    <div class="project-image">
-                        <img src="images/heatlock.png" alt="">
-                    </div>
-                    <div class="project-info">
-                        <div class="title">
-                            Thermal insulation and heat guiding using nanopatterned MoS2
-                        </div>
-                        <div class="authors">
-                            Peng Xiao, Alexandros El Sachat, Emigdio Chávez Angel, <strong>Giorgos Nikoulis</strong>, et al. 
-                        </div>
-                        <div class="doi">
-                            DOI: <a href="https://arxiv.org/abs/2204.04999" target="_blank">10.1088/1361-648X/ac6f39</a>
-                        </div>
-                    </div>
-                </div><div class="project">
-                    <div class="project-image">
-                        <img src="images/nanomaterialscad.png" alt="">
-                    </div>
-                    <div class="project-info">
-                        <div class="title">
-                            NanoMaterialsCAD: Flexible Software for the Design of Nanostructures
-                        </div>
-                        <div class="authors">
-                            <strong>Giorgos Nikoulis</strong>, Panagiotis Grammatikopoulos, Stephan Steinhauer et al.
-                        </div>
-                        <div class="doi">
-                            DOI: <a href="https://advanced.onlinelibrary.wiley.com/doi/abs/10.1002/adts.202000232" target="_blank">10.1088/1361-648X/ac6f39</a>
                         </div>
                     </div>
                 </div>
@@ -167,13 +176,14 @@
                     </div>
                     <div class="project-info">
                         <div class="title">
-                            Single Nanoparticle Activities in Ensemble: A Study on Pd Cluster Nanoportals for Electrochemical Oxygen Evolution Reaction
+                            Single Nanoparticle Activities in Ensemble
                         </div>
-                        <div class="authors">
-                            Abheek Datta, Alexander J. Porkovich, Pawan Kumar, <strong>Giorgos Nikoulis</strong> et al. 
+                        <div class="description">
+                            Charge distribution of Pd nanoparticles on Mg and MgO.
+                            Powered by: <span style="color:black">VASP</span>
                         </div>
-                        <div class="doi">
-                            DOI: <a href="https://pubs.acs.org/doi/10.1021/acs.jpcc.9b07824" target="_blank">10.1088/1361-648X/ac6f39</a>
+                        <div class="links">
+                            Paper: <a href="https://pubs.acs.org/doi/10.1021/acs.jpcc.9b07824" target="_blank">link</a>
                         </div>
                     </div>
                 </div>
@@ -261,7 +271,7 @@
             </footer>
 
         </main>
-        <script type="text/javascript" src="./js/general.js"></script>
+        <script type="text/javascript" src="./js/nav-bar.js"></script>
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         <script type="text/javascript" src="./js/intro.js"></script>
         <script type="text/javascript" src="./js/career.js"></script>
