contant in intro, small career changes

--- a/index.html
+++ b/index.html
@@ -51,16 +51,32 @@
                     <div class="intro-profession">
                         <span id="intro-profession"></span>
                     </div>
-
                     <div class="body" id="intro-body">
                         I was born and raised in Thessaloniki, the second biggest city in Greece.
                         I completed my Doctoral degree in Computational Physics in 2022 and published six papers during my research.
-                        I acquired several skills in physics simulation and computer science, workin with C++ and Python, and web
+                        I acquired several skills in physics simulation and computer science, working with C++ and Python, and web
                         development with HTML, CSS, JavaScript, and Flask during my career. 
                     </div>
                 </div>
                 <div class="image" id="intro-img">
                     <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
+                    <div class="intro-contact">   
+                        <a href="mailto:gnikoul@gmail.com">
+                            <div>
+                                <span class="material-symbols-outlined" style="font-size: 1.8rem;position: absolute;left: 50%;top: 50%;transform: translate(-50%, -50%);">mail</span>
+                            </div>
+                        </a>
+                        <a href="https://github.com/gnikoul" target="_blank">
+                            <div>
+                                <span><i class="fa-brands fa-github"></i></span> 
+                            </div>    
+                        </a> 
+                        <a href="https://pypi.org/user/gnikoul/" target="_blank" >
+                            <div>
+                                <span style="font-size: 0.9rem; font-weight:bold;">PyPI</span>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </section>
 
@@ -203,8 +219,11 @@
                             <div class="period">
                                 2025-now 
                             </div>
+
+
                             <div class="details">
-                                Working on the AI-CODE Horizon project to detect news disinformation using AI tools and support journalists with various services.
+                                Detect news disinformation using AI tools and support journalists with various services. <br><br>
+                                Project: <a href="https://cordis.europa.eu/project/id/101135437" target="_blank">AI&#8209;CODE</a> Horizon
                                 <span class="right-content-arrow"></span>
                             </div>
                         </div>
@@ -219,7 +238,8 @@
                                 2024-2025
                             </div>
                             <div class="details">
-                                Worked on the MAMMOth Horizon project on AI fairness, focusing on detecting and mitigating bias in AI systems.
+                                AI fairness focusing on detecting and mitigating bias in AI systems. <br><br>
+                                Project: <a href="https://cordis.europa.eu/project/id/101070285/results" target="_blank">MAMoth</a> Horizon
                                 <span class="left-content-arrow"></span>
                             </div>
                         </div>
@@ -248,7 +268,8 @@
                                 2019 - 2022
                             </div>
                             <div class="details">
-                                Research and development on material science. Worked on several projects during my Doctoral.
+                                Research and development on material science. Worked on several projects during my Doctoral. <br><br>
+                                <span style="color: black;"> Dissertation: </span><a href="https://www.didaktorika.gr/eadd/handle/10442/52742" target="_blank">link</a>
                                 <span class="left-content-arrow"></span>
                             </div>
                         </div>
@@ -260,7 +281,7 @@
                 <div class="find-me-head">You can find me via:</div>
                 <div class="find-me-info">
                     email: <a href="mailto:gnikoul@gmail.com">gnikoul@gmail.com</a><br>
-                    github <i class="fa-brands fa-github"></i>: <a href="https://github.com/gnikoul" target="_blank">github.com/gnikoul</a><br>
+                    <i class="fa-brands fa-github"></i> github: <a href="https://github.com/gnikoul" target="_blank">github.com/gnikoul</a><br>
                     PyPI: <a href="https://pypi.org/user/gnikoul/" target="_blank">pypi.org/user/gnikoul</a>
                 </div>
 
