--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Explore Giorgos Nikoulis (gnikoul) portfolio: research, projects, and professional work online.">
         <meta property="og:title" content="Gnikoul">
         <meta property="og:description" content="Giorgos Nikoulis (gnikoul) portfolio: research, projects, and professional achievements.">
-        <meta property="og:url" content="https://gnikou.gr">
+        <meta property="og:url" content="https://gnikoul.gr">
         <meta property="og:type" content="website">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
