--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <span class="material-symbols-outlined" style="font-size: 1.8rem;position: absolute;left: 50%;top: 50%;transform: translate(-50%, -50%);">mail</span>
                             </div>
                         </a>
-                        <a href="https://github.com/gnikoul" target="_blank">
+                        <a href="https://github.com/gnikoul" target="_blank" aria-label="GitHub">
                             <div>
                                 <span><i class="fa-brands fa-github"></i></span> 
                             </div>    
