--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/transparency.png" alt="">
+                        <img src="images/transparency.png" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -109,7 +109,7 @@
                 </div>
                 </div><div class="project">
                     <div class="project-image">
-                        <img src="images/nanomaterialscad.png" alt="">
+                        <img src="images/nanomaterialscad.png" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -126,7 +126,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/heatlock.png" alt="">
+                        <img src="images/heatlock.png" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -143,7 +143,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/fenp.png" alt="">
+                        <img src="images/fenp.png" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -160,7 +160,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/mowgap.png" alt="">
+                        <img src="images/mowgap.png" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -176,7 +176,7 @@
                     </div>
                 </div><div class="project">
                     <div class="project-image">
-                        <img src="images/sildenafil.png" alt="">
+                        <img src="images/sildenafil.png" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -193,7 +193,7 @@
                 </div>
                 <div class="project" >
                     <div class="project-image">
-                        <img src="images/chargedistr.png" alt="">
+                        <img src="images/chargedistr.png" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
