--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="image" id="intro-img">
-                    <img src="https://avatars.githubusercontent.com/u/44504498?v=4" alt="Giorgos Nikoulis">
+                    <img src="./images/Giorgos-Nikoulis.png" alt="Giorgos Nikoulis">
                     <div class="intro-contact">   
                         <a href="mailto:gnikoul@gmail.com">
                             <div>
